--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>alauda-cloud</groupId>
-    <artifactId>eureka</artifactId>
+    <artifactId>eureka-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>eureka</name>
+    <name>eureka-server</name>
     <description>Eureka服务注册发现</description>
 
     <parent>
